--- a/Countdown/timer.css
+++ b/Countdown/timer.css
@@ -30,8 +30,9 @@
     height: 50px;
     margin: 0 20px;
     border-radius: 5px;
-    top: 50%;
-    left: 50%;
-    transform: translateX(50%) translateY(50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
